syntax = "proto3";

package authServerClient;
import "protobuf-response.proto";
import "jwt-response.proto";
import "google/protobuf/wrappers.proto";

option java_package = "org.dbs.protobuf.auth";
option java_multiple_files = true;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
message UserV1LoginRequest {
  string userLogin = 1;
  string userPassword = 2;
}

message UserV1LoginResponse {
  org.dbs.protobuf.core.ResponseAnswer responseAnswer = 1;
}

message RefreshUserV1JwtRequest {
  org.dbs.protobuf.core.Jwts jwts = 1;
}

message RefreshUserV1JwtResponse {
  org.dbs.protobuf.core.ResponseAnswer responseAnswer = 1;
}
